# host-picker

./: .gitignore  .travis.yml  CHANGELOG.md  DEVELOPERS_INFO.md  LICENSE.md  MANIFEST.in  README.md  contacts_picker.md  daje.up  paper.bib  paper.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
books/: 0.HOST_quickstart.ipynb  1.HOST_detection.ipynb  2.HOST_transform.ipynb  3.HOST_multi-CF.ipynb  Create_your_own_CF.ipynb  HOST_quickstart.ipynb  HOST_tutorial.ipynb  config_host.py  config_host.yml
host/: __init__.py  errors.py  picker.py  plotting.py  scaffold.py
host/src/: host_clib.c
host_picker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_host.py  test_picker.py
tests_data/: real_case.SAC
tryerror/: daje.py  host_clib.c
