[build-system]
# Need >=77 for the new license-files location
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "host-picker"
version = "2.5.0"
description = "High Order STatisics picking algorithms for time-series analysis"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.7"
license = "MIT"
license-files = ["LICENSE*", "COPYING*", "NOTICE*"]
authors = [{ name = "Matteo Bagagli", email = "matteo@earthroverprogram.org" }]
keywords = ["seismology", "earthquake", "higher-order-statistics", "host", "kurtosis", "skewness"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
]
# Keep runtime deps only here (do NOT also set install_requires in setup.py)
dependencies = [
  "numpy>=1.18.1",
  "matplotlib>=2.1.0",
  "obspy>=1.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest"
]

[project.urls]
Homepage = "https://github.com/mbagagli/host-picker"
Repository = "https://github.com/mbagagli/host-picker"
Issues = "https://github.com/mbagagli/host-picker/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["host*"]

[tool.setuptools.package-data]
host = ["**/*.txt", "**/*.yaml", "**/*.yml", "**/*.json"]
